Needs fix: layout issues

--- a/app/components/result/component.module.css
+++ b/app/components/result/component.module.css
@@ -71,7 +71,7 @@
 }
 
 .nav-row {
-    display: none;
+    /* display: none; */
     position: absolute;
     justify-content: space-around;
     align-items: center;
